[package]
name = "secure-session"
version = "0.3.1"
authors = [ "heartsucker <heartsucker@autistici.org>" ]
description = "Signed, encrypted session cookies for Iron"
homepage = "https://github.com/heartsucker/rust-secure-session"
repository = "https://github.com/heartsucker/rust-secure-session"
documentation = "https://docs.rs/secure-session"
readme = "README.md"
license = "MIT"
keywords = [ "iron", "session", "web", "security" ]
categories = [ "web-programming", "authentication", "cryptography" ]
edition = "2018"

[badges]
travis-ci = { repository = "heartsucker/rust-secure-session", branch = "master" }
appveyor = { repository = "heartsucker/rust-secure-session", branch = "master", service = "github" }

[lib]
name = "secure_session"
path = "./src/lib.rs"

[dependencies]
aead = "0.3"
aes-gcm = "0.6"
chacha20poly1305 = "0.5"
cookie = { version = "0.14", features = [ "percent-encode" ] }
data-encoding = "2"
generic-array = "0.14"
iron = "0.6"
log = "0.4"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
time = { version = "0.2", features = ["std", "serde"] }
typemap = "0.3"

[dev-dependencies]
iron-test = "0.6"
simplelog = "^0.8"
